# horcrux-rs

./: .gitignore  Cargo.toml  README.md  foo.txt  foo_1_of_4.horcrux  foo_1_of_5.horcrux  foo_2_of_4.horcrux  foo_2_of_5.horcrux  foo_3_of_4.horcrux  foo_3_of_5.horcrux  foo_4_of_4.horcrux  foo_4_of_5.horcrux  foo_5_of_5.horcrux  journal.txt  journal_1_of_3.horcrux  journal_1_of_4.horcrux  journal_2_of_3.horcrux  journal_2_of_4.horcrux  journal_3_of_3.horcrux  journal_3_of_4.horcrux  journal_4_of_4.horcrux  test.recovered.txt  test.teno.tmp.txt
.github/: testing.yml
.github/workflows/: publish.yml  publisher.yml  release.yaml  release.yml  releaser.yml  tester.yml  testing.yml
src/: cli.rs  crypto.rs  gf256.rs  lib.rs  main.rs  shamir.rs  tables.rs  tests.rs  utils.rs
src/commands/: bind.rs  horcrux.rs  mod.rs  split.rs  utils.rs
src/shamir/: mod.rs  shamir.rs  tables.rs
src/shamir/commands/: horcrux.rs  mod.rs
