[package]
name = "horcrux-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_bytes = "0.11"
sharks = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }