[package]
name = "hx"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_bytes = "0.11"
sharks = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.72"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
atty = "0.2.14"

[dev-dependencies]
sha2 = "0.10.7"