[package]
name = "horcrust"
version = "1.1.1"
edition = "2021"
description = "Horcrust is a command-line-tool which splits a file into encrypted shards for safekeeping. As long as the specified threshold is met, a user can resurrect their original file at any time - no password necessary."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_bytes = "0.11"
sharks = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.72"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
atty = "0.2.14"

[lib]
name="horcrust"
crate-type = ["lib"]

[dev-dependencies]
sha2 = "0.10.7"
